# ngsinternal

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.backup  ARCHITECTURE.md  BUILDING.md  README.md
src/: CMakeLists.txt  NodeGraphVersion.h.in  arch_android.cmake  arch_ios.cmake  arch_linux.cmake  arch_macos.cmake  arch_windows.cmake  arch_winrt.cmake  ios_notes.txt  keystore_notes.txt  ngsversion.h.in  ngsversion.sh.in  todo.txt  toolchain_android.cmake  toolchain_ios.cmake  toolchain_winrt.cmake
src/apps/: CMakeLists.txt
src/apps/octoplier/: CMakeLists.txt  arch_android.cmake  arch_ios.cmake  arch_macos.cmake  arch_winrt.cmake  qml.qrc  update_dmg.sh
src/apps/robodownloader/: CMakeLists.txt  arch_android.cmake  arch_ios.cmake  arch_macos.cmake  arch_windows.cmake  arch_winrt.cmake  robodownloader.qrc  robodownloader_installer_macos.sh  robodownloader_installer_windows.sh  windows_finalize.sh
src/apps/shared/: notes.txt  update_dmg.sh
src/apps/smashbrowse/: CMakeLists.txt  arch_android.cmake  arch_ios.cmake  arch_macos.cmake  arch_windows.cmake  arch_winrt.cmake  build_installer_macos.sh  build_installer_windows.sh  build_packages_windows.sh  qml.qrc  smashbrowse.qrc  smashbrowse_installer_macos.sh  smashbrowse_installer_windows.sh
src/apps/smashdownloader/: CMakeLists.txt  arch_macos.cmake  build_installer_macos.sh  build_installer_windows.sh  smashdownloader.qrc  smashdownloader_installer_macos.sh  smashdownloader_installer_windows.sh
src/apps/testqml/: CMakeLists.txt  arch_android.cmake  arch_ios.cmake  arch_macos.cmake  arch_winrt.cmake  qml.qrc
src/apps/todopile/: CMakeLists.txt  arch_android.cmake  arch_winrt.cmake  qml.qrc
src/apps/youmacro/: CMakeLists.txt  arch_android.cmake  arch_ios.cmake  arch_macos.cmake  arch_windows.cmake  arch_winrt.cmake  windows_finalize.sh  youmacro.qrc  youmacro_installer_macos.sh  youmacro_installer_windows.sh
src/base/: CMakeLists.txt  arch_android.cmake
src/base/device/: CMakeLists.txt  asyncquery.cpp  asyncquery.h  devicebasictypesgl.cpp  devicebasictypesgl.h  devicedebug.cpp  devicedebug.h  deviceheadersgl.h
src/base/glewhelper/: CMakeLists.txt  glewhelper.cpp  glewhelper.h
src/base/memoryallocator/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  memoryoverloads.cpp  memoryoverloads.h  memoryoverrides.cpp  memoryoverrides.h  taggednew.h
src/base/memorytracker/: CMakeLists.txt  callstack.h  memoryops.cpp  memoryops.h  memorytracker.cpp  memorytracker.h
src/base/objectmodel/: CMakeLists.txt  appconfig.cpp  appconfig.h  basefactory.cpp  basefactory.h  component.cpp  component.h  componentids.cpp  componentids.h  dep.h  deplink.cpp  deplink.h  deploader.cpp  deploader.h  depset.h  depwrappers.h  entity.cpp  entity.h  entityconfig.h  entityids.cpp  entityids.h  interfaceptr.h  lowerhierarchychange.cpp  lowerhierarchychange.h  patheddeps.h  upperhierarchychange.cpp  upperhierarchychange.h
src/base/utils/: CMakeLists.txt  archdebug.h  bits.cpp  bits.h  blockarray.cpp  blockarray.h  crypto.cpp  crypto.h  drawutil.cpp  drawutil.h  enumutil.h  envutil.cpp  envutil.h  fileutil.cpp  fileutil.h  functionobjects.h  idgenerator.cpp  idgenerator.h  path.cpp  path.h  permit.h  polyborder.cpp  polyborder.h  polygon.cpp  polygon.h  signal.cpp  signal.h  simpleloader.cpp  simpleloader.h  simplesaver.cpp  simplesaver.h  simpletypes.h  stringutil.cpp  stringutil.h  threadpool.h  tuplehelper.h
src/components/: CMakeLists.txt
src/components/api/: CMakeLists.txt  dataapi.cpp  dataapi.h  paramapi.cpp  paramapi.h
src/components/compshapes/: CMakeLists.txt  compshape.cpp  compshape.h  compshapecollective.cpp  compshapecollective.h  dotnodeshape.cpp  dotnodeshape.h  groupnodeshape.cpp  groupnodeshape.h  hitregion.h  hittypes.h  inputlabelshape.cpp  inputlabelshape.h  inputnodeshape.cpp  inputnodeshape.h  inputshape.cpp  inputshape.h  linkableshape.cpp  linkableshape.h  linkshape.cpp  linkshape.h  nodegraphselection.cpp  nodegraphselection.h  nodeselection.cpp  nodeselection.h  nodeshape.cpp  nodeshape.h  noteshape.cpp  noteshape.h  outputlabelshape.cpp  outputlabelshape.h  outputnodeshape.cpp  outputnodeshape.h  outputshape.cpp  outputshape.h  rectnodeshape.cpp  rectnodeshape.h  selectableshape.cpp  selectableshape.h  topology.cpp  (+1 more)
src/components/computes/: CMakeLists.txt  accumulatedatanodecompute.cpp  accumulatedatanodecompute.h  appcommunication.cpp  appcommunication.h  baseinputs.h  baseoutputs.h  browsercomputes.cpp  browsercomputes.h  compute.cpp  compute.h  computeglobals.cpp  computeglobals.h  copydatanodecompute.cpp  copydatanodecompute.h  datanodecompute.cpp  datanodecompute.h  dotnodecompute.cpp  dotnodecompute.h  erasedatanodecompute.cpp  erasedatanodecompute.h  errornodecompute.cpp  errornodecompute.h  expgroupnodecompute.cpp  expgroupnodecompute.h  flux.cpp  flux.h  foreachgroupnodecompute.cpp  foreachgroupnodecompute.h  groupnodecompute.cpp  groupnodecompute.h  ifgroupnodecompute.cpp  ifgroupnodecompute.h  inputcompute.cpp  inputcompute.h  inputnodecompute.cpp  inputnodecompute.h  inputs.cpp  inputs.h  jsonutils.cpp  (+26 more)
src/components/entities/: CMakeLists.txt  componentids.h  componentinstancer.cpp  componentinstancer.h  entityids.h  entityinstancer.cpp  entityinstancer.h  factory.cpp  factory.h  guientities.cpp  guientities.h  nonguientities.cpp  nonguientities.h
src/components/interactions/: CMakeLists.txt  canvas.cpp  canvas.h  graphbuilder.cpp  graphbuilder.h  groupinteraction.cpp  (+6 more)
src/deprecated/: nodejsprocess.cpp  nodejsprocess.h
src/desktop/: 3rd_party_licenses.txt  CMakeLists.txt  arch_android.cmake  arch_macos.cmake  arch_windows.cmake  arch_winrt.cmake  config.txt  eula.rtf  eula.txt  wix.template.in
src/entities/: CMakeLists.txt  componentids.cpp  componentids.h  componentinstancer.cpp  componentinstancer.h  entityids.cpp  entityids.h  entityinstancer.cpp  entityinstancer.h  factory.cpp  factory.h  guientities.cpp  guientities.h  nonguientities.cpp  nonguientities.h
src/gui/: CMakeLists.txt
src/guicomponents/: CMakeLists.txt
src/scripts/: building_openssl.txt
src/unittests/: CMakeLists.txt
(+1480 files in other folders)
