

if (${ARCH} MATCHES "ARCH_LINUX")
	add_subdirectory(memorytracker)
	add_subdirectory(utils)
	add_subdirectory(nodegraph)
	add_subdirectory(device)
    #add_subdirectory(shapes)
    add_subdirectory(guiqt)
    add_subdirectory(guiqml)
elseif (${ARCH} MATCHES "ARCH_WINDOWS")
	add_subdirectory(memorytracker)
	add_subdirectory(utils)
	add_subdirectory(nodegraph)
	add_subdirectory(device)
    #add_subdirectory(shapes)
    add_subdirectory(objectmodel)
    add_subdirectory(guiqt)
    add_subdirectory(guiqml)
elseif (${ARCH} MATCHES "ARCH_WINRT")
	add_subdirectory(memorytracker)
	add_subdirectory(utils)
	add_subdirectory(nodegraph)
    add_subdirectory(objectmodel)
    add_subdirectory(guiqt)
    add_subdirectory(guiqml)
elseif (${ARCH} MATCHES "ARCH_ANDROID")
	add_subdirectory(memorytracker)
	add_subdirectory(utils)
	add_subdirectory(nodegraph)
	add_subdirectory(objectmodel)
    add_subdirectory(guiqt)
    add_subdirectory(guiqml)
endif ()



